# rpi-cluster

./: .gitattributes  .gitignore  README.md  pyproject.toml
cluster/orchestrator/: main.py
cluster/shared/: mtls_config.py
cluster/worker/: main.py
deploy/: bootstrap.sh
docs/: architecture.mmd  flow.mmd
docs/captures/: mtls-handshake-open.pcapng  mtls-handshake.pcapng  tls-handshake.pcapng
docs/sprint-notes/: sprint-01.md  sprint-02.md  sprint-03.md  sprint-04.md  sprint-05.md  sprint-06.md  sprint-07.md  sprint-08.md
ml/: train_models.py
pki/: distribute_keys.sh  regenerate_keys.sh
pki/ca/: ca_service.py  generate_intermediate_ca.py  generate_root_ca.py  util.py  verify_signature.py
pki/client/: generate_ca_server_cert.py  generate_orch_cert.py  generate_worker_cert.py  request_cert.py
