[project]
name = "rpi-cluster"
version = "0.1.0"
description = "Secure cluster of Raspberry Pi with local PKI and mTLS"
requires-python = ">=3.11"
dependencies = [
    "cryptography>=42.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "httpx>=0.27",
    "scikit-learn>=1.4",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.3",
    "black>=24.0",
    "pytest>=8.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["cluster*"]
